<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/concept_frame_title"
            android:layout_marginTop="8dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/title_conditional_statement"/>

        <TextView
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:id="@+id/concept_frame_explanation"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/explanation_conditional_statement"/>

        <TextView
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:padding="8dp"
            android:src="@drawable/conditional_statement_java"
            android:id="@+id/concept_frame_example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>